<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".loginPage"
    android:background="@color/white"
    >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300px"
            android:layout_marginLeft="80dp"
            android:fontFamily="sans-serif"
            android:text="mentor"

            android:textColor="#65CFBD"
            android:textSize="130px"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="me"
            android:textColor="#FFC107"
            android:textSize="130px"
            android:textStyle="bold"
            android:layout_marginTop="300px"
            />
        <View
            android:layout_width="500px"
            android:layout_height="500px"
            android:alpha="0.4"
            android:background="@drawable/frontpagecircles"
            android:layout_marginLeft="-1100px"
            android:layout_marginTop="-60px"
            ></View>

        <View
            android:layout_width="500px"
            android:layout_height="500px"
            android:background="@drawable/frontpagecircles"
            android:layout_marginLeft="-350px"
            android:layout_marginTop="-180px"
            android:alpha="0.4">
        </View>

        <View
            android:layout_width="1100px"
            android:layout_height="1800px"
            android:background="@drawable/logindatabox"
            android:layout_marginLeft="-400px"
            android:layout_marginTop="550px"
            android:alpha="1">
        </View>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="80px"
            android:textStyle="bold"
            android:layout_marginTop="550px"
            android:layout_marginLeft="-980px"
            />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Email"
            android:textColor="@color/white"
            android:textSize="50px"
            android:layout_marginTop="680px"
            android:layout_marginLeft="-980px"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textSize="40px"
            android:text="Enter Email"
            android:textColor="#838383"
            android:background="@drawable/inputbox"
            android:layout_marginTop="775px"
            android:layout_marginLeft="-995px"
            android:layout_marginRight="190px"
            android:padding="20px"

            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Password"
            android:textColor="@color/white"
            android:textSize="50px"
            android:layout_marginTop="900px"
            android:layout_marginLeft="-980px"
            />

        <EditText
            android:id="@+id/enterpass"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textSize="40px"
            android:text="Enter Your Password"
            android:textColor="#838383"
            android:background="@drawable/inputbox"
            android:layout_marginTop="995px"
            android:layout_marginLeft="-995px"
            android:layout_marginRight="190px"
            android:padding="20px"

            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="Forgot your Password?"
            android:layout_marginTop="1090px"
            android:layout_marginLeft="-570px"
            />

        <TextView
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_weight="1"
            android:layout_marginTop="1300px"
            android:layout_marginLeft="-750px"
            android:layout_marginRight="350px"
            android:textStyle="bold"
            android:textColor="#65CFBD"
            android:textAlignment="center"
            android:background="@drawable/inputbox"
            android:backgroundTint="@color/white"
            android:paddingTop="20px"
            android:text="Login"
            android:textSize="50px"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40px"
            android:text="Dont have an account?"
            android:textColor="@color/white"
            android:layout_marginTop="1930px"
            android:layout_marginLeft="-840px"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sign Up"
            android:textColor="#2D5C54"
            android:textSize="40px"
            android:layout_marginTop="1930px"
            android:layout_marginLeft="-400px"/>


</LinearLayout>
