...
        android:layout_marginTop="-110px"
        android:layout_marginLeft="210px"
        android:background="@color/special"
        ></ImageButton>

    <TextView
        android:id="@+id/textView91"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ali"
        android:textColor="@color/special"
        android:textSize="60px"
        android:layout_marginLeft="130px"
...
